# cmake-practice

./: .gitignore  README.md
basic-project/: CMakeLists.txt  README.md  my_lib.cc
configure/: CMakeLists.txt  README.md
configure/app/: CMakeLists.txt  main.cc
configure/configured/: config.hpp.in
configure/src/: CMakeLists.txt
configure/src/lib_goodbye/: CMakeLists.txt
configure/src/lib_hello/: hello.cc
hello-world/: CMakeLists.txt  README.md  main.cc
inter-project/: CMakeLists.txt  README.md
inter-project/app/: CMakeLists.txt  main.cc
inter-project/src/: CMakeLists.txt
inter-project/src/my_lib1/: CMakeLists.txt  my_lib.h
var-options/: CMakeLists.txt  README.md
var-options/app/: main.cc
var-options/src/lib_goodbye/: CMakeLists.txt  goodbye.cc  goodbye.h
var-options/src/lib_hello/: CMakeLists.txt  hello.h
